--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -1,21 +1,10 @@
-default.title=Beispiel JSF Standard MLS Titel
-default.header=Beispiel JSF Standard MLS Kopfzeile
-default.content=Beispiel JSF Standard MLS Inhalt
-default.footer=Beispiel JSF Standard MLS Fuﬂzeile
+default.title=Default JSF Title
+default.header=Default JSF Header
+default.content=Default JSF Content
+default.footer=Default JSF Footer
 
-index.title=Pizza Factory Article Database
-index.header=Pizza Factory Article Database
+index.title=Ticket Master
+index.header=Welcome to Ticket Master!
 
-helloworldbean.message=Hallo Welt
-
-nav.bar.brand=Pizza Factory
-nav.bar.submenu.home=Home
-nav.bar.submenu.admin=Admin
-nav.bar.submenu.edit=Edit
-nav.bar.submenu.tools=Tools
-nav.bar.submenu.login=Login
-nav.bar.submenu.user=User
-nav.bar.command.userlist=User List
-nav.bar.command.logout=Logout
-
-nav.bottom.copyright=© by DHBW Mosbach AI
+nav.bar.brand=Ticket Master
+nav.bottom.copyright=(C) by CREW
