Added locale support for english

--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -1,10 +1,10 @@
-default.title=Default JSF Title
-default.header=Default JSF Header
-default.content=Default JSF Content
-default.footer=Default JSF Footer
+default.title=Default JSF Titel
+default.header=Default JSF Kopfzeile
+default.content=Default JSF Inhalt
+default.footer=Default JSF Fusszeile
 
 index.title=Ticket Master
-index.header=Welcome to Ticket Master!
+index.header=Willkommen bei Ticket Master!
 
 nav.bar.brand=Ticket Master
 nav.bottom.copyright=(C) by CREW
