Tabelle für die Tickets

--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -6,5 +6,7 @@ default.footer=Default JSF Fusszeile
 index.title=Ticket Master
 index.header=Willkommen bei Ticket Master!
 
+tickets.header=Tickets 
+
 nav.bar.brand=Ticket Master
 nav.bottom.copyright=(C) by CREW
