dashboard2 mit PrimeFaces

--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -10,3 +10,9 @@ tickets.header=Tickets
 
 nav.bar.brand=Ticket Master
 nav.bottom.copyright=(C) by CREW
+
+dashboard.title=Your Tickets
+dashboard.header=See your Tickets bellow 
+
+dashboard2.title=All Tickets
+dashboard2.header=See your groups Tickets bellow 
