--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -14,5 +14,5 @@ nav.bottom.copyright=(C) by CREW
 dashboard.title=Your Tickets
 dashboard.header=See your Tickets bellow 
 
-dashboard2.title=All Tickets
+dashboard2.title=Alle Tickets
 dashboard2.header=See your groups Tickets bellow 
