Customer User Views 6 fix und titel, header

--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -11,8 +11,15 @@ tickets.header=Tickets
 nav.bar.brand=Ticket Master
 nav.bottom.copyright=(C) by CREW
 
-dashboard.title=Your Tickets
-dashboard.header=See your Tickets bellow 
+admin.title=Alle Tickets
+admin.header=Alle Tickets
 
-dashboard2.title=Alle Tickets
-dashboard2.header=See your groups Tickets bellow 
+editor.home.title=Editor Home
+editor.home.header=Alle Persönlichen Tickets
+editor.tickets.title=Editor Alle Tickets
+editor.tickets.header=Alle Tickets
+
+customer.home.title=Customer Home
+customer.home.header=Alle Persönlichen Tickets
+customer.tickets.title=Alle Tickets der Firma
+customer.tickets.header=Alle Tickets der Firma
