--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -11,15 +11,23 @@ tickets.header=Tickets
 nav.bar.brand=Ticket Master
 nav.bottom.copyright=(C) by CREW
 
-admin.title=Alle Tickets
-admin.header=Alle Tickets
+admin.user.title=Admin Benutzer
+admin.user.header=Alle Nutzer
+admin.tickets.title=Alle Tickets
+admin.tickets.header=Alle Tickets
+admin.details.title=Admin Ticket Details
+admin.details.header=Ticket Details
 
 editor.home.title=Editor Home
 editor.home.header=Alle Persönlichen Tickets
 editor.tickets.title=Editor Alle Tickets
 editor.tickets.header=Alle Tickets
+editor.details.title=Editor Ticket Details
+editor.details.header=Ticket Details
 
-customer.home.title=Customer Home
+customer.home.title=Kunde Home
 customer.home.header=Alle Persönlichen Tickets
 customer.tickets.title=Alle Tickets der Firma
 customer.tickets.header=Alle Tickets der Firma
+customer.details.title=Kunde Ticket Datails
+customer.details.header=Ticket Details
