--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -38,7 +38,7 @@ button.add.entry=Neuer Eintrag
 button.delegate=Delegieren
 button.release=Freigeben
 
-editor=Bearbeiter: 
-entry=Eintrag: 
-entries=Einträge: 
-date=Datum: 
+editor=Bearbeiter
+entry=Eintrag
+entries=Einträge
+date=Datum
