Editor Detail delegate Button dialog

--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -38,7 +38,9 @@ button.add.entry=Neuer Eintrag
 button.delegate=Delegieren
 button.release=Freigeben
 
+ticket.delegate=Ticket delegieren an
 editor=Bearbeiter
 entry=Eintrag
+entry.edit=Eintrag Hinzufügen
 entries=Einträge
 date=Datum
