Adjustments for redirects

--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -19,14 +19,14 @@ admin.details.title=Admin Ticket Details
 admin.details.header=Ticket Details
 
 editor.home.title=Editor Home
-editor.home.header=Alle Persönlichen Tickets
+editor.home.header=Alle Persï¿½nlichen Tickets
 editor.tickets.title=Editor Alle Tickets
 editor.tickets.header=Alle Tickets
 editor.details.title=Editor Ticket Details
 editor.details.header=Ticket Details
 
 customer.home.title=Kunde Home
-customer.home.header=Alle Persönlichen Tickets
+customer.home.header=Alle Persï¿½nlichen Tickets
 customer.tickets.title=Alle Tickets der Firma
 customer.tickets.header=Alle Tickets der Firma
 customer.details.title=Kunde Ticket Datails
@@ -41,6 +41,10 @@ button.release=Freigeben
 ticket.delegate=Ticket delegieren an
 editor=Bearbeiter
 entry=Eintrag
-entry.edit=Eintrag Hinzufügen
-entries=Einträge
+entry.edit=Eintrag Hinzufï¿½gen
+entries=Eintrï¿½ge
 date=Datum
+
+ticket.saveSuccess=Ticket erfolgreich gespeichert.
+ticket.deleteSuccess=Ticket erfolgreich gelÃ¶scht.
+entry.saveSuccess=Eintrag erfolgreich gespeichert.
