--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -37,6 +37,7 @@ customer.create.header=Neues Ticket erstellen
 button.add.entry=Neuer Eintrag
 button.delegate=Delegieren
 button.release=Freigeben
+button.take=Nehmen
 
 ticket.delegate=Ticket delegieren an
 editor=Bearbeiter
