new ticket function for customer added

--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -57,6 +57,8 @@ label.scrollDownEntries=Für weitere Einträge bitte nach unten scrollen.
 label.creator=Ersteller
 label.ticketId=Ticket Nr.
 label.status=Status
+label.content=Inhalt
+label.scrollDownTickets=Für weitere Tickets bitte nach unten scrollen.
 
 ticket.saveSuccess=Ticket erfolgreich gespeichert.
 entry.saveSuccess=Eintrag erfolgreich gespeichert.
