frontend new user

--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -60,5 +60,10 @@ label.status=Status
 label.content=Inhalt
 label.scrollDownTickets=Für weitere Tickets bitte nach unten scrollen.
 
+label.name=Name
+label.email=E-Mail
+label.password=Passwort
+label.role=Rolle
+
 ticket.saveSuccess=Ticket erfolgreich gespeichert.
 entry.saveSuccess=Eintrag erfolgreich gespeichert.
