Add better login experience

--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -6,6 +6,9 @@ default.footer=Default JSF Fusszeile
 index.title=Ticket Master
 index.header=Willkommen bei Ticket Master!
 
+login.title=Ticket Master: Login
+login.header=Bitte loggen Sie sich ein.
+
 tickets.header=Tickets 
 
 nav.bar.brand=Ticket Master
