creating new user

--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -64,6 +64,8 @@ label.name=Name
 label.email=E-Mail
 label.password=Passwort
 label.role=Rolle
+label.login_id=Benutzername
 
 ticket.saveSuccess=Ticket erfolgreich gespeichert.
 entry.saveSuccess=Eintrag erfolgreich gespeichert.
+user.saveSuccess="olo"
