--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -43,6 +43,7 @@ button.release=Freigeben
 button.take=Nehmen
 button.close=Schließen
 button.reopen=Öffnen
+button.delete=Löschen
 
 
 
@@ -71,4 +72,6 @@ label.login_id=Benutzername
 
 ticket.saveSuccess=Ticket erfolgreich gespeichert.
 entry.saveSuccess=Eintrag erfolgreich gespeichert.
-user.saveSuccess="olo"
+
+user.saveSuccess=Benutzer erfolgreich angelegt.
+user.deleteSuccess=Benutzer erfolgreich gelöscht.
