2nd try: Add better login experience

--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -7,7 +7,7 @@ index.title=Ticket Master
 index.header=Willkommen bei Ticket Master!
 
 login.title=Ticket Master: Login
-login.header=Bitte loggen Sie sich ein.
+login.header=Benutzerzugang
 
 tickets.header=Tickets 
 
