--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -34,8 +34,8 @@ customer.tickets.title=Alle Tickets der Firma
 customer.tickets.header=Alle Tickets der Firma
 customer.details.title=Kunde Ticket Datails
 customer.details.header=Ticket Details
-customer.create.title=Kunde Neues Ticket
-customer.create.header=Neues Ticket erstellen
+customer.create.title=Neues Ticket
+customer.create.header=Ein neues Ticket erstellen
 
 button.add.entry=Neuer Eintrag
 button.delegate=Delegieren
