--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -75,3 +75,4 @@ entry.saveSuccess=Eintrag erfolgreich gespeichert.
 
 user.saveSuccess=Benutzer erfolgreich angelegt.
 user.deleteSuccess=Benutzer erfolgreich gelöscht.
+user.myprifle=Mein Profil
