--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -14,10 +14,8 @@ tickets.header=Tickets
 nav.bar.brand=Ticket Master
 nav.bottom.copyright=(C) by CREW
 
-admin.user.title=Admin Benutzer
-admin.user.header=Alle Nutzer
-admin.tickets.title=Alle Tickets
-admin.tickets.header=Alle Tickets
+admin.user.title=Benutzer verwalten
+admin.user.header=Übersicht zu allen Benutzern
 admin.details.title=Admin Ticket Details
 admin.details.header=Ticket Details
 
