--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -75,4 +75,6 @@ entry.saveSuccess=Eintrag erfolgreich gespeichert.
 
 user.saveSuccess=Benutzer erfolgreich angelegt.
 user.deleteSuccess=Benutzer erfolgreich gelöscht.
-user.myprifle=Mein Profil
+user.myProfile=Mein Profil
+user.help=FAQ
+user.help.message=Hier finden Sie häufig gestellte Fragen und Antworten dazu. Um die Antwort zu sehen bitte auf die Frage klicken.
