Finish redesign for customer webpages. TODO: Ticket details

--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -18,6 +18,8 @@ admin.user.title=Benutzer verwalten
 admin.user.header=Übersicht zu allen Benutzern
 admin.details.title=Admin Ticket Details
 admin.details.header=Ticket Details
+admin.create.title=Neuer Benutzer
+admin.create.header=Einen neuen Benutzer anlegen
 
 editor.home.title=Editor Home
 editor.home.header=Alle Persönlichen Tickets
@@ -26,12 +28,12 @@ editor.tickets.header=Alle Tickets
 editor.details.title=Editor Ticket Details
 editor.details.header=Ticket Details
 
-customer.home.title=Kunde Home
-customer.home.header=Alle Persönlichen Tickets
-customer.tickets.title=Alle Tickets der Firma
-customer.tickets.header=Alle Tickets der Firma
-customer.details.title=Kunde Ticket Datails
-customer.details.header=Ticket Details
+customer.home.title=Eingereichte Tickets
+customer.home.header=Übersicht zu eingereichten Tickets
+customer.tickets.title=Tickets des Unternehmens
+customer.tickets.header=Übersicht zu allen Tickets des Unternehmens
+customer.details.title=Ticket-Details
+customer.details.header=Detailansicht des Tickets
 customer.create.title=Neues Ticket
 customer.create.header=Ein neues Ticket erstellen
 
@@ -63,10 +65,10 @@ label.content=Inhalt
 label.scrollDownTickets=Für weitere Tickets bitte nach unten scrollen.
 
 label.name=Name
-label.email=E-Mail
+label.email=E-Mail-Adresse
 label.password=Passwort
 label.role=Rolle
-label.login_id=Benutzername
+label.login_id=Login-ID
 
 ticket.saveSuccess=Ticket erfolgreich gespeichert.
 entry.saveSuccess=Eintrag erfolgreich gespeichert.
