--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -76,3 +76,4 @@ user.deleteSuccess=Benutzer erfolgreich gelöscht.
 user.myProfile=Mein Profil
 user.help=FAQ
 user.help.message=Hier finden Sie häufig gestellte Fragen und Antworten dazu. Um die Antwort zu sehen bitte auf die Frage klicken.
+user.myProfile.message=Hier finden Sie Ihre hinterlegten Profildaten.
