admin user details view completed

--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -16,8 +16,9 @@ nav.bottom.copyright=(C) by CREW
 
 admin.user.title=Benutzer verwalten
 admin.user.header=Übersicht zu allen Benutzern
-admin.details.title=Admin Ticket Details
-admin.details.header=Ticket Details
+admin.details.title=Benutzer Details
+admin.details.header=Benutzer Details
+admin.details.data=Profildaten
 
 editor.home.title=Editor Home
 editor.home.header=Alle Persönlichen Tickets
