Update editor webpages for new design and workflow

--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -22,17 +22,17 @@ admin.details.title=Benutzer Details
 admin.details.header=Benutzer Details
 admin.details.data=Profildaten
 
-editor.home.title=Editor Home
-editor.home.header=Alle Persönlichen Tickets
-editor.tickets.title=Editor Alle Tickets
-editor.tickets.header=Alle Tickets
-editor.details.title=Editor Ticket Details
-editor.details.header=Ticket Details
+editor.home.title=Meine Tickets
+editor.home.header=Übersicht zu eigenen Tickets
+editor.tickets.title=Alle Tickets
+editor.tickets.header=Liste aller Tickets
+editor.details.title=Ticket-Details
+editor.details.header=Detailansicht des Tickes
 
 customer.home.title=Eingereichte Tickets
 customer.home.header=Übersicht zu eingereichten Tickets
 customer.tickets.title=Tickets des Unternehmens
-customer.tickets.header=Übersicht zu allen Tickets des Unternehmens
+customer.tickets.header=Liste aller Tickets des Unternehmens
 customer.details.title=Ticket-Details
 customer.details.header=Detailansicht des Tickets
 customer.create.title=Neues Ticket
