--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -76,6 +76,6 @@ entry.saveSuccess=Eintrag erfolgreich gespeichert.
 
 user.saveSuccess=Benutzer erfolgreich angelegt.
 user.deleteSuccess=Benutzer erfolgreich gelöscht.
-user.myProfile=Mein Profil
+user.myProfile=Accountdetails
 user.help=FAQ
 user.help.message=Hier finden Sie häufig gestellte Fragen und Antworten dazu. Um die Antwort zu sehen bitte auf die Frage klicken.
