--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -74,8 +74,10 @@ label.login_id=Login-ID
 ticket.saveSuccess=Ticket erfolgreich gespeichert.
 entry.saveSuccess=Eintrag erfolgreich gespeichert.
 
+user.title=Mein Profil
+user.header=Mein Profil
 user.saveSuccess=Benutzer erfolgreich angelegt.
 user.deleteSuccess=Benutzer erfolgreich gelöscht.
-user.myProfile=Accountdetails
+user.details=Accountdetails
 user.help=FAQ
 user.help.message=Hier finden Sie häufig gestellte Fragen und Antworten dazu. Um die Antwort zu sehen bitte auf die Frage klicken.
