input validation for login_id (by submitting). -> if login_id exists, an error message appears and the login_id is removed from input field.

--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -21,6 +21,7 @@ admin.create.header=Einen neuen Benutzer anlegen
 admin.details.title=Benutzer Details
 admin.details.header=Benutzer Details
 admin.details.data=Profildaten
+admin.loginId.duplicated=Login-ID bereits vergeben
 
 editor.home.title=Meine Tickets
 editor.home.header=Übersicht zu eigenen Tickets
