change password function for my profile page

--- a/src/main/resources/mls/messages_de.properties
+++ b/src/main/resources/mls/messages_de.properties
@@ -80,3 +80,4 @@ user.deleteSuccess=Benutzer erfolgreich gelöscht.
 user.details=Accountdetails
 user.help=FAQ
 user.help.message=Hier finden Sie häufig gestellte Fragen und Antworten dazu. Um die Antwort zu sehen bitte auf die Frage klicken.
+user.changePassword=Passwort erfolgreich geändert.
